--- a/src/main/resources/templates/searchrentalresult.html
+++ b/src/main/resources/templates/searchrentalresult.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title th:text="${title}"></title>
 </head>
 <body>
-
+<h1>Results</h1>
+<p th:text="${daterange.start}"></p>
+<p th:text="${daterange.end}"></p>
 </body>
 </html>
