--- a/src/main/resources/templates/searchrentalresult.html
+++ b/src/main/resources/templates/searchrentalresult.html
@@ -6,7 +6,33 @@
 </head>
 <body>
 <h1>Results</h1>
-<p th:text="${daterange.start}"></p>
-<p th:text="${daterange.end}"></p>
+<table class="table table-striped">
+    <thead>
+    <tr>
+        <th>License Plate</th>
+        <th>Daily Price</th>
+        <th>Image</th>
+        <th>Action</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="car : ${cars}">
+        <td th:text="${car.licensePlateNumber}"></td>
+        <td th:text="${car.dailyPrice}"></td>
+        <td>
+            <img th:src="@{/api/v1/cars/{id}/image(id=${car.id})}" width="200" />
+        </td>
+        <td>
+            <form action="#" method="post" th:action="@{/rentals/new}">
+                <input type="hidden" id="carid" name="carid" th:value="${car.id}">
+                <input type="hidden" id="startDate" name="startDate" th:value="${daterange.start}">
+                <input type="hidden" id="endDate" name="endDate" th:value="${daterange.end}">
+                <button type="submit">Rent</button>
+            </form>
+        </td>
+    </tr>
+    </tbody>
+</table>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
