--- a/src/main/resources/templates/newrentalform.html
+++ b/src/main/resources/templates/newrentalform.html
@@ -24,5 +24,6 @@
     <label></label>
     <input class="form-control btn btn-primary" id="submit" type="submit" />
 </form>
+</div>
 </body>
 </html>
