--- a/src/main/resources/templates/searchrentalform.html
+++ b/src/main/resources/templates/searchrentalform.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title th:text="${title}"></title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <div th:replace="fragments/general :: head"></div>
 </head>
 <body>
-    <div class="container my-4">
-        <form action="#" th:action="@{/search}" th:object="${search}" method="post">
-            <h1 th:text="${title}"></h1>
-
-            <hr>
-            <div>
+<header th:insert="fragments/general :: navbar"></header>
+<div th:replace="fragments/general :: message"></div>
+<main class="container my-4">
+    <form th:action="@{/}" th:object="${search}" method="post">
+        <h1 th:text="'Search for available cars'" class="text-center my-3"></h1>
+        <hr/>
+        <div class="row my-4">
+            <div class="col">
                 <label for="dateStart">Start</label>
                 <input class="form-control" id="dateStart" th:field="*{start}" type="date"/>
-
+            </div>
+            <div class="col">
                 <label for="dateEnd">End</label>
                 <input class="form-control" id="dateEnd" th:field="*{end}" type="date"/>
             </div>
-            <button type="submit" class="btn btn-primary form-control">Search</button>
-        </form>
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+        </div>
+        <button type="submit" class="btn btn-primary form-control">Search</button>
+    </form>
+</main>
 </body>
 </html>
