--- a/src/main/resources/templates/searchrentalresult.html
+++ b/src/main/resources/templates/searchrentalresult.html
@@ -1,38 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title th:text="${title}"></title>
+    <div th:replace="fragments/general :: head"></div>
 </head>
 <body>
-<h1>Results</h1>
-<table class="table table-striped">
-    <thead>
-    <tr>
-        <th>License Plate</th>
-        <th>Daily Price</th>
-        <th>Image</th>
-        <th>Action</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="car : ${cars}">
-        <td th:text="${car.licensePlateNumber}"></td>
-        <td th:text="${car.dailyPrice}"></td>
-        <td>
-            <img th:src="@{/api/v1/cars/{id}/image(id=${car.id})}" width="200" />
-        </td>
-        <td>
-            <form action="#" method="post" th:action="@{/rentals/new}">
-                <input type="hidden" id="carid" name="carid" th:value="${car.id}">
-                <input type="hidden" id="startDate" name="startDate" th:value="${daterange.start}">
-                <input type="hidden" id="endDate" name="endDate" th:value="${daterange.end}">
-                <button type="submit">Rent</button>
-            </form>
-        </td>
-    </tr>
-    </tbody>
-</table>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+<header th:insert="fragments/general :: navbar"></header>
+<div th:replace="fragments/general :: message"></div>
+<main class="container my-4">
+    <h1 th:text="'Found Cars'" class="text-center my-3"></h1>
+    <h5 class="text-center"><span th:text="'From: ' + ${daterange.start}" class="mx-5"></span><span th:text="'To: ' + ${daterange.end}" class="mx-5"></span></h5>
+    <hr/>
+    <div class="d-flex flex-wrap justify-content-center">
+        <div class="card m-1" style="width: 18rem;" th:each="car : ${cars}">
+            <img th:src="@{/api/v1/cars/{id}/image(id=${car.id})}" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title" th:text="${car.licensePlateNumber}"></h5>
+                <p class="card-text" th:text="'Daily Price: ' + ${car.dailyPrice} + ' Ft'"></p>
+                <form action="#" method="post" th:action="@{/rentals/new}" class="mx-auto">
+                    <input type="hidden" id="carid" name="carid" th:value="${car.id}">
+                    <input type="hidden" id="startDate" name="startDate" th:value="${daterange.start}">
+                    <input type="hidden" id="endDate" name="endDate" th:value="${daterange.end}">
+                    <button type="submit" class="btn btn-primary form-control">Rent</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</main>
 </body>
 </html>
